[package]
name = "gossan-headless"
version.workspace = true
edition.workspace = true
authors = ["CORUM COLLECTIVE LLC <contact@santh.io>"]
license.workspace = true
homepage = "https://santh.io"
repository.workspace = true
description = "Headless Chromium browser engine for executing JavaScript and trapping dynamic XHRs in gossan — part of the Santh security research ecosystem"
keywords.workspace = true
categories.workspace = true

[dependencies]
gossan-core = { version = "0.2", path = "../core" }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
url          = { workspace = true }
futures      = { workspace = true }
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
secfinding = { workspace = true }
