[package]
name = "gossan-headless"
version.workspace = true
edition.workspace = true
authors = ["Santh Project <security@santh.dev>"]
license.workspace = true
homepage = "https://santh.dev"
repository = "https://github.com/santhsecurity/gossan"
description = "Headless Chromium browser engine for executing JavaScript and trapping dynamic XHRs in gossan — part of the security research ecosystem"
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[package.metadata.santh]
status = "alpha"
[dependencies]
gossan-core = { version = "0.3", path = "../core" }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
url          = { workspace = true }
futures      = { workspace = true }
runtime-headless = { path = "../../../../libs/runtime/headless" }
secfinding = { workspace = true }

[lints]
workspace = true
