[package]
name    = "gossan-hidden"
version.workspace = true
edition.workspace = true
description      = "Hidden endpoint and misconfiguration scanner for gossan (CORS, SSRF, JWT, Swagger, cache deception)"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
gossan-core = { version = "0.2", path = "../core" }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
futures     = { workspace = true }
regex       = { workspace = true }
secfinding  = { workspace = true }
