[package]
name = "gossan-hidden"
version.workspace = true
edition.workspace = true
authors = ["Santh <contact@santh.io>"]
license.workspace = true
homepage = "https://santh.io"
repository.workspace = true
description = "Hidden endpoint and misconfiguration scanner for gossan (CORS, SSRF, JWT, Swagger, cache deception) — part of the Santh security research ecosystem"
keywords.workspace = true
categories.workspace = true

[dependencies]
gossan-core = { version = "0.2", path = "../core" }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
stealthreq  = { workspace = true }
futures     = { workspace = true }
regex       = { workspace = true }
secfinding  = { workspace = true }
