[package]
name = "gossan-js"
version.workspace = true
edition.workspace = true
authors = ["Santh <contact@santh.io>"]
license.workspace = true
homepage = "https://santh.io"
repository.workspace = true
description = "JavaScript analysis scanner for gossan (secret detection, prototype pollution, WASM inspection) — part of the Santh security research ecosystem"
keywords.workspace = true
categories.workspace = true

[dependencies]
gossan-core = { version = "0.2", path = "../core" }
async-trait = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
upstream_reqwest = { workspace = true }
futures     = { workspace = true }
regex       = "1"
scraper     = "0.21"
url         = { workspace = true }
serde_json  = { workspace = true }
base64      = "0.22"
secfinding  = { workspace = true }
