[package]
name = "gossan-keyhog-lite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/santhsecurity/gossan"
description = "CPU-only vendor slice of keyhog-core + keyhog-scanner + keyhog-verifier — provides the minimal secret-detection surface gossan-js / gossan-scm / gossan-crawl need without dragging in wgpu/vyre transitive deps from upstream keyhog. Frozen subset; refresh manually when upstream detector schema changes."
readme = "README.md"
keywords = ["secret-scanner", "security", "credentials"]
categories = ["development-tools", "command-line-utilities"]

[package.metadata.santh]
status = "vendor-slice"

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
regex = { workspace = true }
aho-corasick = "1"
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }
serde_json = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
