[package]
name = "gossan-origin"
version.workspace = true
edition.workspace = true
authors = ["Santh <contact@santh.io>"]
license.workspace = true
homepage = "https://santh.io"
repository = "https://github.com/santhsecurity/gossan"
description = "Discovers the true origin IP of web assets behind CDNs/WAFs — part of the Santh security research ecosystem"
keywords = ["santh", "security", "origin-ip", "cdn-bypass", "waf", "recon"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
gossan-core = { version = "0.2", path = "../core" }
upstream_reqwest = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
hickory-resolver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
urlencoding = "2"
base64 = { workspace = true }
toml = { workspace = true }

[features]
default = [
    "dns_misconfig",
    "ssl_cert",
    "http_header",
    "favicon",
    "dns_history",
]
dns_misconfig = []
ssl_cert = []
http_header = []
favicon = []
dns_history = []
