[package]
name = "gossan-origin"
version.workspace = true
edition.workspace = true
authors = ["Santh Project <security@santh.dev>"]
license.workspace = true
homepage = "https://santh.dev"
repository = "https://github.com/santhsecurity/gossan"
description = "Discovers the true origin IP of web assets behind CDNs/WAFs — part of the security research ecosystem"
readme.workspace = true
keywords = [ "security", "origin-ip", "cdn-bypass", "waf" ]
categories = ["network-programming", "command-line-utilities"]


[package.metadata.santh]
status = "alpha"
[dependencies]
gossan-core = { version = "0.3", path = "../core" }
reqwest = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
hickory-resolver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
urlencoding = "2"
base64 = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[features]
default = [
    "dns_misconfig",
    "ssl_cert",
    "http_header",
    "favicon",
    "dns_history",
]
dns_misconfig = []
ssl_cert = []
http_header = []
favicon = []
dns_history = []

[dev-dependencies]
proptest = "1.4"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
wiremock = "0.6"

[lints]
workspace = true
