[package]
name = "gossan-subdomain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage = "https://santh.io"
repository.workspace = true
description = "Subdomain discovery scanner for gossan (CT logs, Wayback, permutations, DNS bruteforce) — part of the Santh security research ecosystem"
readme = "../../README.md"
keywords = ["santh", "security", "recon", "subdomain", "dns", "scanner"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
gossan-core = { version = "0.2", path = "../core" }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
tokio            = { workspace = true }
upstream_reqwest = { workspace = true }
futures          = { workspace = true }
hickory-resolver = { workspace = true }
secfinding       = { workspace = true }
url          = { workspace = true }
regex        = { workspace = true }
base64       = { workspace = true }
