[package]
name = "gossan-techstack"
version.workspace = true
edition.workspace = true
authors = ["Santh <contact@santh.io>"]
license.workspace = true
homepage = "https://santh.io"
repository.workspace = true
description = "Tech stack fingerprinting scanner for panoram — powered by truestack — part of the Santh security research ecosystem"
keywords.workspace = true
categories.workspace = true

[dependencies]
gossan-core = { version = "0.2", path = "../core" }
truestack    = "0.1.0"
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
upstream_reqwest = { workspace = true }
futures     = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
secfinding  = { workspace = true }
